FileSync.ini JobsManager.au3

--- a/FileSync.ini
+++ b/FileSync.ini
@@ -1,5 +1,5 @@
 [testdossier]
-source=D:\DOCUMENTS\ARCHIVES\Bijoux\
+source=D:\DOCUMENTS\ARCHIVES\
 target=D:\DOCUMENTS\MES_PROJETS\Nouveau dossier\Sync\test2\
 encryption=true
 [testfichier]
